# muon

./: .gitignore  CMakeLists.txt  README  README.md
po/ar/: muon.po
po/ast/: muon.po
po/bg/: muon.po
po/bs/: muon.po
po/ca/: muon.po
po/ca@valencia/: muon.po
po/cs/: muon.po
po/da/: muon.po
po/de/: muon.po
po/el/: muon.po
po/en_GB/: muon.po
po/eo/: muon.po
po/es/: muon.po
po/et/: muon.po
po/fi/: muon.po
po/fr/: muon.po
po/ga/: muon.po
po/gl/: muon.po
po/hu/: muon.po
po/id/: muon.po
po/is/: muon.po
po/it/: muon.po
po/ja/: muon.po
po/kk/: muon.po
po/ko/: muon.po
po/lt/: muon.po
po/mai/: muon.po
po/mr/: muon.po
po/nb/: muon.po
po/nds/: muon.po
po/nl/: muon.po
po/nn/: muon.po
po/pa/: muon.po
po/pl/: muon.po
po/pt/: muon.po
po/pt_BR/: muon.po
po/ro/: muon.po
po/ru/: muon.po
po/sk/: muon.po
po/sl/: muon.po
po/sr/: muon.po
po/sr@ijekavian/: muon.po
po/sr@ijekavianlatin/: muon.po
po/sr@latin/: muon.po
po/sv/: muon.po
po/tr/: muon.po
po/ug/: muon.po
po/uk/: muon.po
po/vi/: muon.po
po/zh_CN/: muon.po
po/zh_TW/: muon.po
src/: CMakeLists.txt  DetailsWidget.cpp  DetailsWidget.h  MainWindow.cpp  MainWindow.h  ManagerWidget.cpp  ReviewWidget.cpp  StatusWidget.cpp  StatusWidget.h  TransactionWidget.cpp  TransactionWidget.h  main.cpp  muonui.rc
src/DetailsTabs/: ChangelogTab.cpp  ChangelogTab.h  DependsTab.cpp  DependsTab.h  DetailsTab.cpp  DetailsTab.h  ElidedLabel.cpp  ElidedLabel.h  InstalledFilesTab.cpp  InstalledFilesTab.h  MainTab.cpp  MainTab.h  TechnicalDetailsTab.cpp  TechnicalDetailsTab.h  VersionTab.cpp  VersionTab.h
src/DownloadModel/: DownloadDelegate.cpp  DownloadModel.cpp  DownloadModel.h
src/FilterWidget/: ArchitectureFilter.cpp  CategoryFilter.cpp  FilterModel.h  FilterWidget.cpp  FilterWidget.h  OriginFilter.cpp  StatusFilter.cpp  StatusFilter.h
src/PackageModel/: PackageDelegate.cpp  PackageDelegate.h  PackageModel.cpp  PackageModel.h  PackageProxyModel.cpp  PackageView.cpp  PackageView.h  PackageViewHeader.cpp  PackageViewHeader.h  PackageWidget.cpp  PackageWidget.h
src/Widgets/: BusyIndicator.cpp  BusyIndicator.h
src/config/: GeneralSettingsPage.cpp  ManagerSettingsDialog.cpp  ManagerSettingsDialog.h
src/icons/: CMakeLists.txt  genicons-ubuntu-supported.sh  sc-emblems-ubuntu-supported.svgz
src/muonapt/: ChangesDialog.cpp  MuonStrings.cpp  QAptActions.cpp  QAptActions.h
src/muonapt/HistoryView/: HistoryDialog.cpp  HistoryDialog.h  HistoryView.cpp  HistoryView.h
src/settings/: SettingsPageBase.cpp  SettingsPageBase.h
